# crabase

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PROMPT.md  README.md  Trunk.toml  fix_plan.md  index.html  input.css  justfile  mise.toml  package-lock.json  package.json  ralph.sh  tailwind.config.js  vitest.config.ts
js/: codemirror-bridge.js  codemirror-bundle.js  markdown-bridge.js  markdown-bundle.js
ralph/: CLAUDE.md  PROMPT.md  fix_plan.md  reference.md
ralph/specs/: design.md  project.md  user_stories.md
specs/: project.md
src/: app.rs  command_palette.rs  content_area.rs  global_shortcuts.rs  header_bar.rs  header_edit_form.rs  icons.rs  log.rs  main.rs  main_layout.rs  main_screen.rs  overlay.rs  restore_panel.rs  shortcuts.rs  table_finder.rs  tauri.rs  theme.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/dark/: icon.icns
src-tauri/icons/light/: icon.icns
src-tauri/src/: app_icon.rs  claude.rs  db.rs  error.rs  lib.rs  main.rs  restore.rs  saved_connections.rs  saved_queries.rs  settings.rs
src-tauri/src/db/: connection.rs  execute.rs  introspection.rs  mod.rs  mutations.rs  query.rs  schema.rs  table_ops.rs  types.rs
src-tauri/tests/: integration_test.rs
src/connection/: connection_form.rs  connection_screen.rs  mod.rs  saved_connections.rs
src/settings/: mod.rs  settings_view.rs  shortcut_input.rs  shortcuts_settings.rs  theme_setting.rs
src/sidebar/: mod.rs  saved_queries_list.rs  tables_list.rs
src/sql_editor/: chat_panel.rs  codemirror.rs  mod.rs  sql_editor.rs  sql_results.rs  sql_tab.rs  sql_toolbar.rs
src/table_view/: cell_editor.rs  cell_format.rs  change_tracker.rs  context_menu.rs  data_fetcher.rs  data_table.rs  dirty_bar.rs  filter_bar.rs  find_overlay.rs  find_state.rs  json_editor.rs  mod.rs  modal_editors.rs  pagination.rs  (+5 more)
tests/: docker-compose.yml  seed.sql  setup.sh  teardown.sh
tests/test_server/: Cargo.toml
tests/test_server/src/: main.rs
(+44 files in other folders)
