[package]
name = "crabase"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
flate2 = "1"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["rt"] }
futures = "0.3.32"
png = "0.18.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
