[package]
name = "test-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-server"
path = "src/main.rs"

[dependencies]
crabase = { path = "../../src-tauri" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
tower = "0.5"
